Add exportUsersWithItemsToFile method